refactor: improve formatting and readability in StringUtils